--- a/home.css
+++ b/home.css
@@ -147,7 +147,6 @@ hr {
 }
 
 .home-btn {
-  /* width: 90%; */
   display: block;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
@@ -199,7 +198,7 @@ hr {
   height: 36px;
 }
 
-.settings-icon path {
+.settings-icon path, .kebab path {
   /* color: var(--default-font-color); */
   fill: var(--card-text-color);
 }
@@ -375,7 +374,7 @@ hr {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   border-style: var(--border-style);
   /* top, right, bottom, left */
-  padding: 30px 40px 30px 40px;
+  padding: 20px 40px 20px 40px;
   border-radius: 10px;
 }
 
@@ -397,6 +396,17 @@ hr {
 
 .card-text {
   font-weight: 300;
+}
+
+.connect-container {
+  display: flex;
+  align-items: center;
+}
+
+.kebab {
+  width: 3rem;
+  height: 3rem;
+  cursor: pointer;
 }
 
 #cancel-req {
