--- a/style.css
+++ b/style.css
@@ -2,153 +2,34 @@ body {
     background-color: #000000;
 }
 
-
-h2 {
+header {
     color: #ffffff;
-    text-align: center;
-}
-
-form {
-    max-width: 400px;
-    margin: 0 auto;
-}
-
-input[type="checkbox"] {
-    display: inline-flex;
-    align-items: center;
-    margin-right: 5px; /* Adjust the spacing between the checkbox and the label */
-}
-
-#i1 {
- display: flex; /* Make sure the container is a flex container */
-    align-items: center; /* Align items vertically in the flex container */
-    margin-right: 20px;
+    font-size: 60px;
+    padding: 4%;
 }
 
 img {
-    width: 100px;
-    margin: 0;
+    width: 50px;  
+    margin: 0 0%; 
 }
 
+.button-container {
+    margin-top: 40px; 
+    text-align: center; 
 
-
-
-/* Correct the styles for the label */
-label {
-    color: #ffffff;
-    display: inline-block; /* Set display to inline-block */
-    vertical-align: middle; /* Align the label vertically with the checkbox */
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px; /* Add 'px' to the font-size value */
-    margin: 10px 0; /* Add margin as needed */
-    padding-left: 0px; 
 }
-
-
-
 
 button {
-    width: 550px;
-    height: 40px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 20px auto;
-    text-align: center;
+    padding: 10px 20px;
     font-size: 16px;
+    margin: 2%;
+    border-radius: 10px;
     background: #25C5F7;
-    padding-right: 160px; 
-}
-
-#back_button {
-    font-size: 15px;
-}
-
-#create-new {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 20px auto; /* Center the input horizontally and provide margin */
-    text-align: center;
-    font-size: 50px;
-    background: #25C5F7; /* Add 'px' to the font-size value */
-
-}
-
-
-#input1,
-#input2, #input3, #input4, #input5, #input6, #input7,
-#input8, #input9, #input10, #input11, #input13 {
-    width: 550px;
-    height: 40px;
-    border-radius: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 10px auto; /* Center the input horizontally and provide margin */
-    text-align: center;
-    font-size: 20px; /* Add 'px' to the font-size value */
-    margin-bottom: 0 auto;
-    padding-right: 160px; 
-}
-
- #input12 {
-    width: 550px;
-    height: 100px; /* Increase the height for more space */
-    border-radius: 30px;
-    display: flex;
-    align-items: flex-start; /* Align items at the top of the flex container vertically */
-    justify-content: flex-start; /* Align items at the start of the flex container horizontally */
-    margin: 10px auto; /* Center the input horizontally and provide margin */
-    text-align: center;
-    font-size: 20px; /* Add 'px' to the font-size value */
-    margin-bottom: 0 auto;
-    padding-right: 160px;
-}
-
-#input12::placeholder {
-    vertical-align: top; /* Adjust the vertical alignment of the placeholder text */
-}
-
-#line {
-            border-top: 1px solid #FFFFFF; /* Black solid line */
-             width: 140%;
-            margin: 20px 0; /* Add space above and below the line */
-        }
-
-/* Container for radio options */
-.contact-options {
-    display: flex;
-    justify-content: space-around;
-    margin: 10px auto;
-}
-
-/* Style for each radio option */
-.contact-option {
     width: 150px;
-    height: 40px;
-    border-radius: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-size: 20px;
-    cursor: pointer;
-    margin-right: 10px;
+    height: 64px;
+    flex-shrink: 0;
 }
 
-/* Style for selected radio option */
-.contact-option:checked {
-    background-color: #3498db;
+label {
     color: #ffffff;
-}
-
-/* Additional styles if needed */
-.contact-label {
-    margin-bottom: 10px;
-    display: block;
-    font-size: 20px;
 }
