--- a/signup.css
+++ b/signup.css
@@ -47,8 +47,9 @@ label {
     margin: 10px auto;
     text-align: center;
     font-size: 20px;
-    padding-right: 0; /* Remove unnecessary padding */
+    /* Remove the padding-right property */
 }
+
 
     
     /*
