--- a/signup.css
+++ b/signup.css
@@ -39,7 +39,7 @@ img {
 
 
 /* Correct the styles for the label */
-label {
+form label {
     color: #ffffff;
     display: flex;
     align-items: center;
@@ -47,8 +47,8 @@ label {
     margin: 10px auto;
     text-align: center;
     font-size: 20px;
-    /* Remove the padding-right property */
 }
+
 
 
     
