--- a/signup.css
+++ b/signup.css
@@ -1,3 +1,9 @@
+* {
+  font-family: 'Nunito', sans-serif;
+  color: var(--default-font-color)
+    font-size: 20px;
+}
+
 body {
     background-color: #000000;
 }
