--- a/signup.css
+++ b/signup.css
@@ -3,6 +3,12 @@ body {
     
 }
 
+header {
+    color: #ffffff;
+    font-size: 60px;
+    padding: 4%;
+    text-align: center;
+}
 
 h2 {
     color: #ffffff;
