--- a/signup.css
+++ b/signup.css
@@ -33,8 +33,8 @@ input[type="checkbox"] {
 }
 
 #i1 {
- display: flex; /* Make sure the container is a flex container */
-    align-items: center; /* Align items vertically in the flex container */
+
+
     margin-right: 20px;
     font-family: 'Nunito', sans-serif;
     color: white;
@@ -50,20 +50,26 @@ img {
 
 
 /* Correct the styles for the label */
-label {
+/*label {
     color: #ffffff;
-    display: inline-block; /* Set display to inline-block */
-    vertical-align: middle; /* Align the label vertically with the checkbox */
+    display: inline-block; /* Set display to inline-block 
+    vertical-align: middle; /* Align the label vertically with the checkbox 
     text-align: center;
     justify-content: center;
     align-items: center;
-    font-size: 20px; /* Add 'px' to the font-size value */
-    margin: 10px 0; /* Add margin as needed */
+    font-size: 20px; /* Add 'px' to the font-size value 
+    margin: 10px 0; /* Add margin as needed 
     padding-left: 0px; 
 }
+*/
 
-
-
+label {
+    color: #ffffff;
+    display: inline-flex; /* Set display to inline-flex */
+    align-items: center; /* Align items vertically in the flex container */
+    margin: 10px 0; /* Add margin as needed */
+    font-size: 20px; /* Add 'px' to the font-size value */
+}
 
 button {
     width: 550px;
