--- a/signup.css
+++ b/signup.css
@@ -35,10 +35,12 @@ input[type="checkbox"] {
 #i1 {
 
 
-    margin-right: 20px;
-    font-family: 'Nunito', sans-serif;
-    color: white;
+    display: inline-flex;
+    align-items: center;
+    margin-right: 5px; /* Adjust the spacing between the checkbox and the label */
+     font-family: 'Nunito', sans-serif;
     font-size: 40px;
+    color: white;
 }
 
 img {
@@ -64,11 +66,12 @@ img {
 */
 
 label {
-    color: #ffffff;
-    display: inline-flex; /* Set display to inline-flex */
-    align-items: center; /* Align items vertically in the flex container */
-    margin: 10px 0; /* Add margin as needed */
-    font-size: 20px; /* Add 'px' to the font-size value */
+    display: inline-flex;
+    align-items: center;
+    margin-right: 5px; /* Adjust the spacing between the checkbox and the label */
+     font-family: 'Nunito', sans-serif;
+    color:white;
+    font-size: 40px; /* Add 'px' to the font-size value */
 }
 
 button {
@@ -95,8 +98,8 @@ button {
     justify-content: center;
     margin: 20px auto; /* Center the input horizontally and provide margin */
     text-align: center;
-    font-size: 50px;
-    background: #25C5F7; /* Add 'px' to the font-size value */
+    font-size: 60px;
+    background: black; /* Add 'px' to the font-size value */
 
 }
 
@@ -107,12 +110,11 @@ button {
     width: 550px;
     height: 40px;
     border-radius: 30px;
-    display: flex;
+    display: inline-flex;
     align-items: center;
-    justify-content: center;
-    margin: 10px auto; /* Center the input horizontally and provide margin */
-    text-align: center;
-    font-size: 20px; /* Add 'px' to the font-size value */
+    margin-right: 5px; /* Adjust the spacing between the checkbox and the label */
+     font-family: 'Nunito', sans-serif;
+    font-size: 40px;
     margin-bottom: 0 auto;
     padding-right: 160px; 
 }
@@ -121,14 +123,13 @@ button {
     width: 550px;
     height: 100px; /* Increase the height for more space */
     border-radius: 30px;
-    display: flex;
-    align-items: flex-start; /* Align items at the top of the flex container vertically */
-    justify-content: flex-start; /* Align items at the start of the flex container horizontally */
-    margin: 10px auto; /* Center the input horizontally and provide margin */
-    text-align: center;
-    font-size: 20px; /* Add 'px' to the font-size value */
-    margin-bottom: 0 auto;
+       margin-bottom: 0 auto;
     padding-right: 160px;
+    display: inline-flex;
+    align-items: center;
+    margin-right: 5px; /* Adjust the spacing between the checkbox and the label */
+     font-family: 'Nunito', sans-serif;
+    font-size: 40px;
 }
 
 #input12::placeholder {
