--- a/signup.css
+++ b/signup.css
@@ -118,6 +118,7 @@ button {
     font-size: 40px;
     margin-bottom: 0 auto;
     padding-right: 160px; 
+    white-space: nowrap;
 }
 
  #input12 {
@@ -131,6 +132,7 @@ button {
     margin-right: 5px; /* Adjust the spacing between the checkbox and the label */
      font-family: 'Nunito', sans-serif;
     font-size: 40px;
+     white-space: nowrap;
 }
 
 #input12::placeholder {
