--- a/signup.css
+++ b/signup.css
@@ -100,7 +100,7 @@ button {
     margin: 20px auto; /* Center the input horizontally and provide margin */
     text-align: center;
     font-size: 60px;
-    background: black; /* Add 'px' to the font-size value */
+    background: #25C5F7; /* Add 'px' to the font-size value */
 
 }
 
