--- a/signup.css
+++ b/signup.css
@@ -45,6 +45,7 @@ input[type="checkbox"] {
      font-family: 'Nunito', sans-serif;
     font-size: 40px;
     color: white;
+    padding-right: 160px; 
 }
 
 img {
@@ -81,6 +82,7 @@ label {
     justify-content: center;
     font-size: 40px;
     white-space: nowrap;*/ /* Prevent text wrapping */
+    padding-right: 160px; 
 }
 
 /* Make checkboxes inline elements */
@@ -131,6 +133,7 @@ button {
     font-size: 40px;
     margin-bottom: 15px; 
     white-space: nowrap;
+    padding-right: 160px; 
 }
 
  #input12 {
@@ -146,10 +149,12 @@ button {
     font-size: 40px;
      white-space: nowrap;
      margin-bottom: 10px; 
+     padding-right: 160px; 
 }
 
 #input12::placeholder {
     vertical-align: top; /* Adjust the vertical alignment of the placeholder text */
+    padding-right: 160px; 
 }
 
 #line {
@@ -212,6 +217,11 @@ nowrap-label {
     transform: scale(2); /* Adjust the scale factor as needed */
 }
 
+#record {
+    width: 200px;
+    height: 30px;
+    padding-right: 160px; 
+}
 
 
 /* Additional styles if needed */
