--- a/signup.css
+++ b/signup.css
@@ -98,7 +98,7 @@ button {
     width: 550px;
     height: 40px;
     border-radius: 10px;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     margin: 20px auto;
