--- a/signup.css
+++ b/signup.css
@@ -1,6 +1,10 @@
+
+
 body {
     background-color: #000000;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 header {
@@ -13,15 +17,13 @@ header {
 h2 {
     color: #ffffff;
     text-align: center;
-     font-family: 'Nunito', sans-serif;
+    font-family: 'Nunito', sans-serif;
     font-size: 40px;
-    text-align: center;
 }
 
 form {
-    max-width: 100%;
     margin: 0 auto;
-     font-family: 'Nunito', sans-serif;
+    font-family: 'Nunito', sans-serif;
     font-size: 40px;
     text-align: center;
 }
@@ -44,13 +46,15 @@ input[type="checkbox"] {
     margin-right: 5px; /* Adjust the spacing between the checkbox and the label */
      font-family: 'Nunito', sans-serif;
     font-size: 40px;
-    color: white;
-    padding-right: 160px; 
+    color: white; 
      text-align: center;
+     margin-left: auto;
+    margin-right: auto;
+ max-width: 100%; 
 }
 
 img {
-    width: 100px;
+    width: 500px;
     margin: 0;
 }
 
@@ -231,4 +235,33 @@ nowrap-label {
     display: block;
     font-size: 40px;
     white-space: nowrap;
+}
+
+input[type="checkbox"],
+#i1,
+img,
+label,
+button,
+#create-new,
+#input1,
+#input2,
+#input3,
+#input4,
+#input5,
+#input6,
+#input7,
+#input8,
+#input9,
+#input10,
+#input11,
+#input13,
+#input12,
+#line,
+.contact-options,
+.contact-option,
+#record,
+.contact-label {
+    display: inline-block;
+    margin: 0 auto;
+    text-align: center;
 }
