--- a/signup.css
+++ b/signup.css
@@ -129,7 +129,7 @@ button {
 
 #input1,
 #input2, #input3, #input4, #input5, #input6, #input7,
-#input8, #input9, #input10, #input11, #input13 {
+#input8, #input9, #input10, #input11, #input13, #input14 {
     width: 550px;
     height: 40px;
     border-radius: 30px;
