--- a/signup.css
+++ b/signup.css
@@ -268,3 +268,8 @@ button,
     margin: 0 auto;
     text-align: center;
 }
+
+#record {
+    margin-bottom: 20px; /* Adjust the value to the amount of space you want */
+}
+
