--- a/signup.css
+++ b/signup.css
@@ -274,3 +274,35 @@ button,
     margin-bottom: 20px; /* Adjust the value to the amount of space you want */
 }
 
+/* Center all elements */
+body, header, h2, form, input[type="checkbox"], #i1, img, label, button, #create-new, #input1, #input2, #input3, #input4, #input5, #input6, #input7, #input8, #input9, #input10, #input11, #input13, #input14, #input12, #line, .contact-options, .contact-option, #record, .contact-label {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+}
+
+/* Center button horizontally and add space around it */
+button {
+    font-size: 40px;
+    border-radius: 10px;
+    background: #25C5F7;
+    width: 550px;
+    height: 40px;
+    margin: 2% auto;
+}
+
+/* Increase image size to full width */
+#record {
+    width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+/* Add space around the line */
+#line {
+    border-top: 1px solid #FFFFFF;
+    width: 140%;
+    margin: 20px 0;
+    padding: 8px;
+}
+
