--- a/signup.css
+++ b/signup.css
@@ -103,14 +103,17 @@ button {
     font-size: 40px;
     border-radius: 10px;
     background: #25C5F7;
-    width: 80%; /* Use a percentage for responsive width */
-    height: 40px;
+    width: 550%; /* Use a percentage for responsive width */
+    height: 60px;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 2% auto; /* Use auto for horizontal centering */
+    margin: 15%; /* Use auto for horizontal centering */
 }
+
+
+
 
 #back_button {
     font-size: 40px;
@@ -280,19 +283,10 @@ body, header, h2, form, input[type="checkbox"], #i1, img, label, button, #create
     text-align: center;
 }
 
-/* Center button horizontally and add space around it */
-button {
-    font-size: 40px;
-    border-radius: 10px;
-    background: #25C5F7;
-    width: 550px;
-    height: 40px;
-    margin: 2% auto;
-}
 
 /* Increase image size to full width */
 #record {
-    width: 100%;
+    width: 25%;
     height: auto;
     margin-bottom: 20px;
 }
