--- a/signup.css
+++ b/signup.css
@@ -146,7 +146,8 @@ button {
 
 #input1,
 #input2, #input3, #input4, #input5, #input6, #input7,
-#input8, #input9, #input10, #input11, #input13 {
+#input8, #input9, #input10, #input11, #input13,
+#v1, #v2, #v3, #v4, #v5, #v6, #v7, #v8, #v9{
     width: 550px;
     height: 40px;
     border-radius: 30px;
