--- a/signup.css
+++ b/signup.css
@@ -59,11 +59,11 @@ input[type="checkbox"] {
     margin-right: 5px; /* Adjust the spacing between the checkbox and the label */
      font-family: 'Nunito', sans-serif;
     font-size: 40px;
-    color: white; 
+    color: white;
      text-align: center;
      margin-left: auto;
     margin-right: auto;
- max-width: 100%; 
+ max-width: 100%;
 }
 
 img {
@@ -77,14 +77,14 @@ img {
 /* Correct the styles for the label */
 /*label {
     color: #ffffff;
-    display: inline-block; /* Set display to inline-block 
-    vertical-align: middle; /* Align the label vertically with the checkbox 
+    display: inline-block; /* Set display to inline-block
+    vertical-align: middle; /* Align the label vertically with the checkbox
     text-align: center;
     justify-content: center;
     align-items: center;
-    font-size: 20px; /* Add 'px' to the font-size value 
-    margin: 10px 0; /* Add margin as needed 
-    padding-left: 0px; 
+    font-size: 20px; /* Add 'px' to the font-size value
+    margin: 10px 0; /* Add margin as needed
+    padding-left: 0px;
 }
 */
 
@@ -95,13 +95,13 @@ label {
     font-family: 'Nunito', sans-serif;
         display: inline-flex;
     align-items: center;
-    margin-right: 5px; 
+    margin-right: 5px;
     color: white;
     justify-content: center;
     font-size: 40px;
     white-space: nowrap; /* Prevent text wrapping */
-    
- 
+
+
 }
 
 
@@ -156,9 +156,9 @@ button {
     margin-right: 10px; /* Adjust the spacing between the checkbox and the label */
      font-family: 'Nunito', sans-serif;
     font-size: 40px;
-    margin-bottom: 15px; 
+    margin-bottom: 15px;
     white-space: nowrap;
-    padding-right: 160px; 
+    padding-right: 160px;
 }
 
  #input12 {
@@ -173,13 +173,13 @@ button {
      font-family: 'Nunito', sans-serif;
     font-size: 40px;
      white-space: nowrap;
-     margin-bottom: 10px; 
-     padding-right: 160px; 
+     margin-bottom: 10px;
+     padding-right: 160px;
 }
 
 #input12::placeholder {
     vertical-align: top; /* Adjust the vertical alignment of the placeholder text */
-    padding-right: 160px; 
+    padding-right: 160px;
 }
 
 #line {
@@ -215,7 +215,7 @@ nowrap-label {
     margin-right: 10px;
 }
 
-/* Style for selected radio option 
+/* Style for selected radio option
 .contact-option:checked {
     background-color: #3498db;
     color: #ffffff;
@@ -280,3 +280,12 @@ button,
     text-align: center;
 }
 
+form {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.checkbox-item {
+    justify-self: start;
+    margin-top: 10px;
+}
