--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ header {
     color: #ffffff;
     font-size: 60px;
     padding: 4%;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 img {
